syntax = "proto3";

option go_package = "github.com/aidansteele/flowdog/gwlb/shark";

import "google/protobuf/timestamp.proto";

enum PacketType {
  UNKNOWN = 0;
  PRE = 1;
  POST = 2;
}

message GetPacketsInput {
  string Filter = 1;
  PacketType PacketType = 2;
}

message GetPacketsOutput {
  bytes Payload = 1;
  google.protobuf.Timestamp Time = 2;
  bytes SslKeyLog = 3;
}

service Vpcshark {
  rpc GetPackets(GetPacketsInput) returns (stream GetPacketsOutput) {}
}
